# StreamFin

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build-switch.yaml
app/include/activity/: gallery_activity.hpp  main_activity.hpp  player_view.hpp  server_list.hpp  stremio_anime.hpp  stremio_catalogs.hpp  stremio_detail.hpp  stremio_favourites.hpp  stremio_home.hpp  stremio_resume.hpp  stremio_rows.hpp  stremio_search.hpp  stremio_series.hpp  stremio_streams.hpp
app/include/api/: http.hpp  jellyfin.hpp  stremio.hpp  websocket.hpp
app/include/client/: apache.hpp  client.hpp  local.hpp
app/include/tab/: dashboard.hpp  download_tab.hpp  home_tab.hpp  live_tv.hpp  media_collection.hpp  media_folder.hpp  media_movie.hpp  media_series.hpp  music_album.hpp  playlist.hpp  remote_add.hpp  remote_tab.hpp  remote_view.hpp  search_result.hpp  server_add.hpp  server_login.hpp  setting_tab.hpp  song_list.hpp  suggest_movie.hpp  suggest_show.hpp
app/include/utils/: config.hpp  download.hpp  event.hpp  image.hpp  keybind.hpp  misc.hpp  thread.hpp  ums.hpp
app/include/view/: auto_tab_frame.hpp  context_menu.hpp  h_recycling.hpp  icon_button.hpp  mpv_core.hpp  music_view.hpp  people_source.hpp  player_setting.hpp  recycling_grid.hpp  recyling_video.hpp  search_list.hpp  stremio_theme.hpp  text_box.hpp  video_card.hpp  video_profile.hpp  video_source.hpp  video_view.hpp
app/platform/android/: .gitignore
app/platform/android/app/jni/: CMakeLists.txt
app/platform/osx/: app.icns
app/platform/vita/: template.xml.in
app/platform/win32/: app.rc.in
app/src/: main.cpp
app/src/activity/: gallery_activity.cpp  main_activity.cpp  player_view.cpp  server_list.cpp  stremio_anime.cpp  stremio_catalogs.cpp  stremio_detail.cpp  stremio_favourites.cpp  stremio_home.cpp  stremio_resume.cpp  stremio_rows.cpp  stremio_search.cpp  stremio_series.cpp  stremio_streams.cpp
app/src/api/: analytics.cpp  http.cpp  websocket.cpp
app/src/client/: apache.cpp  avio.cpp  client.cpp  local.cpp  webdav.cpp
app/src/tab/: dashboard.cpp  download_tab.cpp  home_tab.cpp  live_tv.cpp  media_collection.cpp  media_folder.cpp  media_movie.cpp  media_series.cpp  music_album.cpp  playlist.cpp  remote_add.cpp  remote_tab.cpp  remote_view.cpp  search_result.cpp  search_tab.cpp  server_add.cpp  server_login.cpp  setting_tab.cpp  song_list.cpp  suggest_movie.cpp  suggest_show.cpp
app/src/utils/: config.cpp  download.cpp  image.cpp  keybind.cpp  misc.cpp  thread.cpp  ums.cpp  version.cpp
app/src/view/: auto_tab_frame.cpp  context_menu.cpp  custom_button.cpp  danmaku_core.cpp  gallery_view.cpp  h_recycling.cpp  icon_button.cpp  mpv_core.cpp  music_view.cpp  people_source.cpp  player_setting.cpp  recycling_grid.cpp  recyling_video.cpp  search_list.cpp  text_box.cpp  video_card.cpp  video_profile.cpp  video_progress_slider.cpp  video_source.cpp  video_view.cpp
cmake/: FindMPV.cmake
debian/: Dockerfile  changelog  control  rules
resources/i18n/cs/: hints.json  main.json
resources/i18n/de/: hints.json  main.json
resources/i18n/en-US/: hints.json  main.json
resources/i18n/es/: hints.json  main.json
resources/i18n/fr/: hints.json  main.json
resources/i18n/ja/: hints.json  main.json
resources/i18n/ko/: hints.json  main.json
resources/i18n/pt/: hints.json  main.json
resources/i18n/ru/: hints.json  main.json
resources/i18n/tr/: hints.json  main.json
resources/i18n/uk/: hints.json  main.json
resources/i18n/vi/: hints.json  main.json
resources/i18n/zh-Hans/: hints.json  main.json
resources/i18n/zh-Hant/: hints.json  main.json
resources/xml/activity/: gallery.xml  server_list.xml
resources/xml/tabs/: collection.xml  dashboard.xml  downloads.xml  home.xml  media.xml  media_folder.xml  movie.xml  remote.xml  search_result.xml  search_tv.xml  series.xml  settings.xml  suggest_show.xml
resources/xml/view/: activity_log.xml  activity_warn.xml  context_menu.xml  device.xml  download_card.xml  episode_card.xml  remote_add.xml  session.xml  user_item.xml  video_card.xml  video_profile.xml  video_view.xml
scripts/: README.md  flatpak-manifest.yaml  fun.dragonfly.switchfin.appdata.xml  fun.dragonfly.switchfin.desktop
scripts/android/: Makefile  arm64-v8a.meson  armeabi-v7a.meson  x86_64.meson
scripts/aur/: PKGBUILD
scripts/forwarder/: CMakeLists.txt  config.json.in
scripts/macos/: Makefile  arm64.meson  mpv.patch  x86_64.meson
scripts/mingw64/curl/: PKGBUILD  static-libs.patch
scripts/mingw64/dav1d/: PKGBUILD
scripts/mingw64/ffmpeg/: PKGBUILD  avio.patch
scripts/mingw64/freetype/: PKGBUILD
scripts/mingw64/glslang/: PKGBUILD
scripts/mingw64/harfbuzz/: PKGBUILD
scripts/mingw64/libass/: PKGBUILD
scripts/mingw64/libplacebo/: PKGBUILD
scripts/mingw64/libssh2/: PKGBUILD
scripts/mingw64/libwebp/: PKGBUILD
scripts/mingw64/mbedtls/: PKGBUILD
scripts/mingw64/mpv/: 0001-d3d11-render.patch  PKGBUILD
scripts/mingw64/shaderc/: 0001-fix-glslang-hlsl-linking-order.patch  PKGBUILD
scripts/mingw64/spirv-cross/: PKGBUILD
scripts/mingw64/spirv-headers/: PKGBUILD
scripts/mingw64/spirv-tools/: PKGBUILD
scripts/patches/: ffmpeg-v4l2request.patch  mpv-v4l2request.patch
scripts/ps4/SDL2/: PKGBUILD
scripts/ps4/dav1d/: PKGBUILD  cross.txt
scripts/ps4/ffmpeg/: PKGBUILD
scripts/ps4/libcurl/: PKGBUILD
scripts/ps4/libmpv/: PKGBUILD  mpv.patch
scripts/ps4/mbedtls/: PKGBUILD
scripts/ps4/musl/: PKGBUILD
scripts/snap/: snapcraft.yaml
scripts/switch/: Dockerfile
scripts/switch/curl/: PKGBUILD
scripts/switch/dav1d/: PKGBUILD
scripts/switch/ffmpeg/: PKGBUILD  avio.patch  ffmpeg-7.1.5.patch
scripts/switch/hacbrewpack/: nostartupuser.patch
scripts/switch/libnx/: PKGBUILD
scripts/switch/libssh2/: PKGBUILD
scripts/switch/mbedtls/: PKGBUILD  mbedtls-3.6.5.patch
scripts/switch/mpv/: PKGBUILD  deko3d.patch
scripts/switch/nspmini/: PKGBUILD
scripts/vita/curl/: VITABUILD
scripts/vita/ffmpeg/: VITABUILD  ffmpeg.patch
scripts/vita/mbedtls/: VITABUILD  mbedtls.patch
scripts/vita/mpv/: VITABUILD  gxm.patch
(+7 files in other folders)
